--- a/back/css/MainBeck_style.css
+++ b/back/css/MainBeck_style.css
@@ -53,6 +53,8 @@ header {
     padding-top: 86px;
     display: flex;
     justify-content: center;
+    z-index: 10;
+    backdrop-filter: blur(15px);
 }
 
 header .inner {
@@ -102,7 +104,6 @@ nav ul.gnb>li {
     font-weight: 300;
     text-align: center;
     color: var(--Wcolor);
-    background: #ccc;
     min-width: 80px;
 }
 
@@ -113,7 +114,25 @@ nav ul.gnb>li>a {
     justify-content: center;
 }
 
-nav ul.gnb>li>ul.sub {}
+nav ul.gnb>li>a.on, nav ul.gnb>li:hover>a {
+    font-size: 30px;
+    font-weight: 700;
+    color: var(--MainColor);
+}
+
+nav ul.gnb>li>ul.sub {
+    font-size: 20px;
+    gap: 30px;
+    background: var(--Bcolor);
+    z-index: 9;
+    backdrop-filter: blur(15px);
+}
+nav ul.gnb>li>ul.sub .about_sub {
+    width: 236px;
+    height: 386px;
+    padding: 40px;
+    
+}
 
 nav .right {
     width: 200px;
