1920사이즈 헤더완성

--- a/back/css/MainBeck_style.css
+++ b/back/css/MainBeck_style.css
@@ -95,6 +95,7 @@ nav ul.gnb {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: 65px;
 }
 
 nav ul.gnb>li {
@@ -122,19 +123,17 @@ nav ul.gnb>li>a {
 
 nav ul.gnb>li.on>a,
 nav ul.gnb>li:hover>a {
-    /* font-size: 30px; */
-    font-weight: 700;
+    font-size: 24px;
+    font-weight: 500;
     color: var(--MainColor);
 }
 
 nav ul.gnb>li>ul.sub {
     font-size: 20px;
-    /* background: var(--Bcolor); */
     backdrop-filter: blur(15px);
-    padding: 40px 40px 40px;
+    padding: 40px 30px;
     position: absolute;
     left: 50%;
-    top: 100px;
     transform: translateX(-50%);
     border: 1px solid #4F485A;
     border-top: 0;
@@ -149,40 +148,38 @@ nav ul.gnb>li:hover>ul.sub {
 
 nav ul.gnb>li:nth-child(1)>ul.sub {
     width: 236px;
-    top: 80px;
+    height: 386px;
 }
 
 nav ul.gnb>li:nth-child(2)>ul.sub {
     width: 248px;
+    height: 162px;
 }
 
-nav ul.gnb>li:nth-child(3)>ul.sub {}
+nav ul.gnb>li:nth-child(3)>ul.sub {
+    width: 135px;
+    height: 162px;
+}
 
 nav ul.gnb>li:nth-child(4)>ul.sub {
-    width: 230px;
+    width: 166px;
+    height: 162px;
 }
 
 nav ul.gnb>li:nth-child(5)>ul.sub {
     width: 288px;
+    height: 330px;
 }
-
-nav ul.gnb>li>ul.sub.w248 {
-    width: 248px;
-}
-
-nav ul.gnb>li>ul.sub.w288 {}
 
 nav ul.gnb>li>ul.sub li {
-    height: 40px;
-    line-height: 40px;
+    padding-bottom: 30px;
 }
-
-/* nav ul.gnb>li>ul.sub .about_sub {
-    width: 236px;
-    height: 386px;
-    padding: 40px;
-
-} */
+nav ul.gnb>li>ul.sub li:hover, 
+nav ul.gnb>li>ul.sub li.on{
+    font-size: 20px;
+    font-weight: 500;
+    color: var(--MainColor);
+}
 
 nav .right {
     width: 200px;
