--- a/css/common.css
+++ b/css/common.css
@@ -117,17 +117,46 @@ body {
 
 header {
     width: 100%;
-    height: 374px;
-    background: url(../back/img/header_background.png) no-repeat center top/cover;
+    /* height: 374px; */
+    /* background: url(../back/img/header_background.svg) no-repeat center top/cover; */
     padding-top: 86px;
     display: flex;
     justify-content: center;
     z-index: 10;
-    backdrop-filter: blur(15px);
+    position: relative;
+    position: fixed;
+    left: 0;
+    top: 0;
+    transition: top 1.2s;
+    /*    background: pink;
+    border-radius: 0 0 300px 300px; */
+}
+
+header.off {
+    top: -100%;
+}
+
+.header_bg {
+    position: fixed;
+    width: 100%;
+    height: 374px;
+    left: 0;
+    top: 0;
+    background: #0D031C;
+    /* filter: drop-shadow(0 0 20px rgba(0, 0, 0, 0.04)); */
+    border-radius: 0 0 50% 50%;
+    transition: height .6s, border-radius .6s, top 1.2s .6s, background-color 1.2s .6s;
+}
+
+header.off .header_bg {
+    height: 100vh;
+    border-radius: 0;
+    background: var(--Wcolor);
+    top: -100%;
 }
 
 header .inner {
-    width: 100%;
+    width: 1408px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -146,7 +175,7 @@ header h1 a img {
 }
 
 header nav {
-    width: 1408px;
+    width: 100%;
     height: 100px;
     border: 1px solid #4a4259;
     border-radius: 50px;
@@ -154,6 +183,7 @@ header nav {
     justify-content: space-between;
     align-items: center;
     padding: 0 70px;
+    backdrop-filter: blur(15px);
     /* padding-left: 70px; */
 }
 
@@ -318,4 +348,8 @@ header nav .right .ham ul li {
     background: var(--Wcolor);
     border-radius: 2px;
     transform-origin: center;
+}
+
+main {
+    height: 5000px;
 }
