--- a/css/common.css
+++ b/css/common.css
@@ -142,7 +142,7 @@ header.off {
     height: 374px;
     left: 0;
     top: 0;
-    background: #0D031C;
+    background: var(--Bcolor);
     /* filter: drop-shadow(0 0 20px rgba(0, 0, 0, 0.04)); */
     border-radius: 0 0 50% 50%;
     transition: height .6s, border-radius .6s, top 1.2s .6s, background-color 1.2s .6s;
@@ -154,6 +154,7 @@ header.off .header_bg {
     background: var(--Wcolor);
     top: -100%;
 }
+
 
 header .inner {
     width: 1408px;
@@ -168,8 +169,8 @@ header h1 {
     justify-content: center;
     align-items: center;
     padding-bottom: 30px;
+    z-index: 9;
 }
-
 header h1 a img {
     width: 200px;
 }
@@ -186,7 +187,6 @@ header nav {
     backdrop-filter: blur(15px);
     /* padding-left: 70px; */
 }
-
 
 header nav ul.gnb {
     width: 950px;
@@ -283,7 +283,7 @@ header nav ul.gnb>li>ul.sub li.on {
 
 header nav .right {
     width: 200px;
-    height: 34px;
+    height: 35px;
     display: flex;
     align-items: center;
     /* padding-right: 70px; */
