--- a/back/css/MainBeck_style.css
+++ b/back/css/MainBeck_style.css
@@ -1,1 +1,64 @@
 @charset "UTF-8";
+
+
+.circlebody {
+    position: relative;
+    width: 100vw; height: 100vh;
+    perspective: 1000px;
+    margin-top: 260px;
+}
+
+.circlebody #circle {
+    width: 600px;
+    height: 800px;
+    position: absolute;
+    left: 50%; top: 50%;
+    margin-left: -300px; margin-top:-400px;
+    transform-style: preserve-3d;
+    animation: ani linear 50s infinite;
+    /* animation-play-state: paused; */
+}
+
+@keyframes ani{
+    0%{transform: rotateY(0deg);}
+    100%{transform: rotateY(360deg);}
+}
+
+.circlebody #circle article {
+    width: 100%; height: 100%;
+    position: absolute;
+    left: 0; top: 0;
+    backface-visibility: hidden;
+}
+
+.circlebody > #circle article .poster {
+    width: 100%;
+    height: 100%;
+}
+.circlebody > #circle article .poster>img {
+    box-sizing: border-box;
+    border: 1px solid rgba(255,255,255,.5);
+    background: rgba(255,255,255,.06);
+    width: 100%;
+    height: 100%;
+    padding: 50px;
+    position: relative;
+    opacity: .7;
+    cursor: pointer;
+    overflow: hidden;
+    transition: .5s;
+}
+.circlebody > #circle article .poster>img:hover {
+    background: rgba(255,255,255,.15);
+    transform: scale(1.03);
+    opacity: 1;
+}
+
+.face1 {transform: rotateY(0deg) translateZ(-764px);}
+.face2 {transform: rotateY(45deg) translateZ(-764px);}
+.face3 {transform: rotateY(90deg) translateZ(-764px);}
+.face4 {transform: rotateY(135deg) translateZ(-764px);}
+.face5 {transform: rotateY(180deg) translateZ(-764px);}
+.face6 {transform: rotateY(225deg) translateZ(-764px);}
+.face7 {transform: rotateY(270deg) translateZ(-764px);}
+.face8 {transform: rotateY(315deg) translateZ(-764px);}
